# zk-paynet

./: .gitignore  Cargo.toml  LICENSE.MD  README.md
crates/channel/: Cargo.toml
crates/channel/src/: lib.rs  manager.rs  messages.rs  operations.rs  state.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: identity.rs  lib.rs  storage.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs  quic.rs  transport.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: encryption.rs  lib.rs  messages.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs
crates/solana/: Cargo.toml
crates/zk/: Cargo.toml  README.md
crates/zk/src/: circuit.rs  commitment.rs  lib.rs  nullifier.rs  proof.rs
