[workspace]
members = [
    "crates/crypto",
    "crates/p2p",
    "crates/zk",
    "crates/protocol",
    "crates/relay",
    "crates/channel",
    "crates/cli",
    "crates/solana",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ZK-Paynet Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Cryptography - Identity & Signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# Cryptography - Key Agreement
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
# Cryptography - Encryption
chacha20poly1305 = "0.10"
# Cryptography - Hashing & KDF
sha2 = "0.10"
hkdf = "0.12"
# Seed phrases
bip39 = "2.0"

# Networking - QUIC transport
quinn = "0.11"
rustls = "0.23"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Utilities
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
