[package]
name = "crypto"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true
hkdf.workspace = true
bip39.workspace = true
rand.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
bs58.workspace = true
dirs = "5.0"
