[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
crypto = { path = "../crypto" }
serde.workspace = true
bincode.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
serde-big-array = "0.5"
