[package]
name = "zk"
version.workspace = true
edition.workspace = true

[dependencies]
# ZK dependencies
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"

# Other dependencies
serde.workspace = true
rand.workspace = true
sha2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex = "0.4"
